add terraform code

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ target/
 # IntelliJ related
 .idea/
 *.iml
+
+# Terraform related
+.terraform/
+.terraform.lock.hcl
+.terraform.tfstate.lock.info
+terraform.tfstate
+terraform.tfstate.backup
